<resources>
    <string name="app_name" translatable="false">OpenManga</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="loading_error">Loading failed</string>
    <string name="close">Close</string>
    <string name="local_storage">Local storage</string>
    <string name="storages_remote">Remote storages</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="chapters_list">Chapters list</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_favourite">Add to favourites</string>
    <string name="wait">Wait…</string>
    <string name="view_mode_list">List</string>
    <string name="view_mode_grid_large">Large grid</string>
    <string name="view_mode_grid_medium">Medium grid</string>
    <string name="view_mode_grid_small">Small grid</string>
    <string name="action_history">History</string>
    <string name="action_remove">Remove</string>
    <string name="action_save">Save</string>
    <string name="continue_reading">Continue</string>
    <string name="search_results">Search results</string>
    <string name="action_share">Share</string>
    <string name="action_reading_options">Reading options</string>
    <string name="scrolling_direction">Scrolling direction</string>
    <string name="keep_screen">Keep screen on</string>
    <string name="image_saved">Image saved successfully</string>
    <string name="unable_to_save_image">Unable to save image</string>
    <string name="saving_manga">Saving manga</string>
    <string name="preparing">Preparing…</string>
    <string name="completed">Completed</string>
    <string name="cancelling">Cancelling…</string>
    <string name="disclaimer">All manga, characters and logos belong to their respective copyright owners. This app\'s developers not have any affiliation with the content providers.</string>
    <string name="select_sources">Select manga\'s sources</string>
    <string name="navigate">Go to</string>
    <string name="goto_page" formatted="false">Go to: %d/%d</string>
    <string name="current_page" formatted="false">Current page: %d</string>
    <string name="bug_report">Send a bug report</string>
    <string name="bug_report_summ">Send debug log to developer</string>
    <string name="log_not_found">Error log not found!</string>
    <string name="bug_report_message">Sending a bug report you will help the developers. Debug log may contain addresses of some viewed pages.</string>
    <string name="send">Send</string>
    <string name="action_unfavourite">Remove from favourites</string>
    <string name="no_saved_manga">No saved manga on your device</string>
    <string name="no_manga_found">No manga found</string>
    <string name="history_empty">History is empty</string>
    <string name="no_favourites">No favourites</string>
    <string name="help">Help</string>
    <string name="already_saved">This manga is already saved on your device</string>
    <string name="action_clear_cache">Clear image cache</string>
    <string name="cache_clearing">Clearing cache…</string>
    <string name="cache_size" formatted="false">Cache size: %.1f Mb</string>
    <string name="size_calculating">Calculating size…</string>
    <string name="action_histclear">Clear history</string>
    <string name="history_will_cleared">History will be erased</string>
    <string name="file_not_found">File not found</string>
    <string name="error">An error has occurred</string>
    <string name="action_clear_search_hist">Clear search history</string>
    <string name="about">About</string>
    <string name="version" formatted="false">Version: %s</string>
    <string name="sort_updated">Updated</string>
    <string name="sort_popular">Popular</string>
    <string name="sort_latest">Latest</string>
    <string name="action_sort">Sort order</string>
    <string name="sort_rating">By rating</string>
    <string name="genre_all">All</string>
    <string name="action_genre">Genres</string>
    <string name="genre_art">Art</string>
    <string name="genre_action">Action</string>
    <string name="genre_martialarts">Martial arts</string>
    <string name="genre_vampires">Vampires</string>
    <string name="genre_harem">Harem</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_shoujo">Shoujo</string>
    <string name="genre_shounen">Shounen</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_ecchi">Ecchi</string>
    <string name="genre_school">School</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_youkai">Youkai</string>
    <string name="genre_genderch">Gender change</string>
    <string name="genre_seinen">Seinen</string>
    <string name="genre_yaoi">Yaoi</string>
    <string name="genre_doujinshi">Doujinshi</string>
    <string name="genre_manga">Manga</string>
    <string name="genre_artistcg">Artist CG</string>
    <string name="genre_gamecg">Game CG</string>
    <string name="genre_western">Western</string>
    <string name="genre_nonh">Non-H</string>
    <string name="genre_imageset">Image set</string>
    <string name="genre_misc">Misc</string>
    <string name="genre_asianporn">Asian porn</string>
    <string name="genre_cosplay">Cosplay</string>
    <string name="sort_random">Random</string>
    <string name="scroll_by_volkeys">Scroll by volume keys</string>
    <string name="chapters_to_save">Save manga</string>
    <string name="no_chapters_found">No chapters found</string>
    <string name="genre_yuri">Yuri</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_fantastic">Fantastic</string>
    <string name="genre_supernatural">Supernatural</string>
    <string name="genre_military">Military</string>
    <string name="genre_magic">Magic</string>
    <string name="genre_sfiction">Science fiction</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_daily">Daily</string>
    <string name="no_new_chapters">No new chapters</string>
    <string name="check_new_chapters">Check for new chapters</string>
    <string name="new_chapters">New chapters are available</string>
    <string name="checking_new_chapters">Checking for new chapters</string>
    <string name="check_chapters_summary">If you added manga to favourites, you will receive a notifications about new chapters.</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="checking_frequency">Frequency of checking</string>
    <string name="retry">Retry</string>
    <string name="manga_local_dir">Local manga\'s directory</string>
    <string name="dir_no_access">No write access to this directory</string>
    <string name="downloads_queue">Downloads queue</string>
    <string name="no_downloads">No queued downloads</string>
    <string name="queue">In queue</string>
    <string name="new_chapters_count" formatted="false">New chapters: %d</string>
    <string name="manga_updates">Updated manga</string>
    <string name="over_wifi_only">Over WiFi only</string>
    <string name="mark_all_viewed">Mark all as viewed</string>
    <string name="mark_all_viewed_confirm">Mark all updated mangas as viewed?</string>
    <string name="send_mail">Send email</string>
    <string name="welcome">Welcome</string>
    <string name="show_at_startup">Show at startup</string>
    <string name="prefer_qsearch">Prefer quick search</string>
    <string name="prefer_qsearch_summ">Search in current source, if possible</string>
    <string name="search_on_another_sources">Search on another sources</string>
    <string name="genre_hero_fantasy">Heroic fantasy</string>
    <string name="genre_detective">Detective</string>
    <string name="genre_game">Game</string>
    <string name="genre_historical">Historical</string>
    <string name="genre_codomo">Codomo</string>
    <string name="maho_shoujo">Maho-Shoujo</string>
    <string name="genre_mecha">Mecha</string>
    <string name="genre_sci_fi">Science fiction</string>
    <string name="genre_natural">Natural</string>
    <string name="genre_postapocalipse">Postapocalipse</string>
    <string name="genre_shoujo_ai">Shoujo-ai</string>
    <string name="genre_shounen_ai">Shounen-ai</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_genderbender">Gender bender</string>
    <string name="genre_josei">Josei</string>
    <string name="genre_music">Music</string>
    <string name="genre_psychological">Psychological</string>
    <string name="genre_samurai">Samurai</string>
    <string name="genre_tragedy">Tragedy</string>
    <string name="genre_sports">Sports</string>
    <string name="genre_bara">Bara</string>
    <string name="genre_cyberpunk">Cyberpunk</string>
    <string name="genre_erotica">Erotica</string>
    <string name="backup">Backup data</string>
    <string name="backup_done">Backup completed</string>
    <string name="restore">Restore data</string>
    <string name="restore_done">Data was successfully restored</string>
    <string name="done">Done</string>
    <string name="data">Data</string>
    <string name="select_backup">Select backup</string>
    <string name="import_file">Import</string>
    <string name="export_file">Export</string>
    <string name="reset">Reset</string>
    <string name="direction_ltr">Left to right</string>
    <string name="direction_ttb">Top to bottom</string>
    <string name="direction_rtl">Right to left</string>
    <string name="interval_4hours">Every 4 hours</string>
    <string name="interval_twice_day">Twice a day</string>
    <string name="interval_once_day">Every day</string>
    <string name="interval_two_days">Every 2 days</string>
    <string name="genre_tension">Tension</string>
    <string name="genre_yetiskin">Yetişkin</string>
    <string name="web">Web</string>
    <string name="genre_uzay">Uzay</string>
    <string name="genre_seytanlar">Şeytanlar</string>
    <string name="genre_oneshot">One Shot</string>
    <string name="genre_parodi">Parodi</string>
    <string name="genre_police">Police</string>
    <string name="genre_robotlar">Robotlar</string>
    <string name="genre_smut">Smut</string>
    <string name="open_on_start">Open on start</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="view_mode">View mode</string>
    <string name="sort_alphabetical">Alphabetical</string>
    <string name="genre_adult">Adult</string>
    <string name="genre_mature">Mature</string>
    <string name="genre_slice_of_life">Slice of Life</string>
    <string name="more">More</string>
    <string name="select_file">Select file</string>
    <string name="import_progress" formatted="false">Pages imported: %d from %d</string>
    <string name="import_complete">Importing completed</string>
    <string name="favourites_categories_default">Reading now, Read later</string>
    <string name="favourites_categories">Favourites categories</string>
    <string name="favourites_categories_description">Enter splitted by \',\'</string>
    <string name="category_no">No category</string>
    <string name="action_category">Category</string>
    <string name="save_image">Save image</string>
    <string name="action_options">Options</string>
    <string name="adjust_brightness">Adjust brightness</string>
    <string name="unfavourited">Removed from favourites</string>
    <string name="account">Account</string>
    <string name="sync_favourites">Sync favourites</string>
    <string name="sync_history">Sync history</string>
    <string name="sync_terms">Synchronization provided by anibreak.ru\n\nWe do not share your personal data with third parties but also we are not provide any warranty</string>
</resources>